<resources>
    <string name="app_name">DIY Home Automation</string>
    <string name="company_description">Your home at your fingertip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_chair_desc" translatable="false">Btn Chair</string>
    <string name="btn_bath_desc" translatable="false">Btn Bath</string>
    <string name="btn_bed_desc" translatable="false">Btn Bed</string>
    <string name="btn_tv_desc" translatable="false">Btn TV</string>
    <string name="btn_kitchen_desc" translatable="false">Btn Kitchen</string>
    <string name="btn_garage_desc" translatable="false">Btn Garage</string>
    <string name="btn_other_desc" translatable="false">Btn Other</string>
    <string name="btn_add_desc" translatable="false">Btn Add</string>
    <string name="btn_notifications_desc" translatable="false">Btn Notifications</string>
    <string name="home_fg_mainText">Hello there</string>
    <string name="home_fg_subText">Welcome to your smart home</string>
    <string name="deviceAdd_select_name">Select room name</string>
    <string name="name">Name</string>
    <string name="deviceAdd_device_name">Enter device name</string>
    <string name="select_icon">Select icon</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="signup_to_start_your_new_journey">SignUp to start your new Journey</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? LOGIN</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="all_room">All Room</string>
    <string name="active_device">Active Device</string>
    <string name="home" translatable="false">Home</string>
    <string name="schedule">Schedule</string>
    <string name="restrictions">Restrictions</string>
    <string name="settings">Settings</string>
    <string name="enter_room_name">Enter room name</string>
    <string name="create_your_restrictions">Create your Restrictions</string>
    <string name="create_your_routine_schedule">Create your routine schedule</string>
    <string name="all_day">All day</string>
    <string name="today">Today</string>
    <string name="Delete">Delete Device</string>
    <string name="Edit">Edit Device</string>
    <string name="PinValue">Pin Value\n</string>
    <string name="deviceAdd_device_state">Enter device state</string>
    <string name="deviceAdd_device_pinvalue">Enter device pin value</string>
    <string name="deviceAdd_device_value">Enter device value</string>
    <string name="Value">Value</string>
    <string name="addDevice">Add device</string>
    <string name="editRoom">Edit Room</string>
    <string name="deleteRoom">Delete Room</string>
</resources>