<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".homes.DeviceAddActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deviceAdd_select_name"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/room_nameEdit_actv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deviceAdd_device_name"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_nameEdit_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deviceAdd_device_pinvalue"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_pinValue_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PinValue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deviceAdd_device_state"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>
    <ToggleButton
        android:id="@+id/device_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="True"
        android:textOff="False">
    </ToggleButton>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deviceAdd_device_value"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_value_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Value"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_icon"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:weightSum="4">

                <ImageButton
                    android:id="@+id/device_chairEdit_btn"
                    android:contentDescription="@string/btn_chair_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="5dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_chair" />

                <ImageButton
                    android:id="@+id/device_bathEdit_btn"
                    android:contentDescription="@string/btn_bath_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="5dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_bathtub"/>

                <ImageButton
                    android:id="@+id/device_bedEdit_btn"
                    android:contentDescription="@string/btn_bed_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="5dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_bed"/>

                <ImageButton
                    android:id="@+id/device_tvEdit_btn"
                    android:contentDescription="@string/btn_tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="5dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_tv"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:weightSum="4">

                <ImageButton
                    android:id="@+id/device_kitchenEdit_btn"
                    android:contentDescription="@string/btn_kitchen_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="10dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_kitchen"/>

                <ImageButton
                    android:id="@+id/device_garageEdit_btn"
                    android:contentDescription="@string/btn_garage_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="10dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_garage"/>

                <ImageButton
                    android:id="@+id/device_otherEdit_btn"
                    android:contentDescription="@string/btn_other_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="10dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_other_house"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_weight="2">

        <Button
            android:id="@+id/device_addEdit_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#6FAF25"
            android:text="@string/Edit" />

        <Button
            android:id="@+id/device_delete_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#D13126"
            android:text="@string/Delete" />
    </LinearLayout>
</LinearLayout>