<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".homes.RoomCUActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_room_name"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/room_nameEdit_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_icon"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:weightSum="4">

                <ImageButton
                    android:id="@+id/room_Editiconchair_btn"
                    android:contentDescription="@string/btn_chair_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="5dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_chair" />

                <ImageButton
                    android:id="@+id/room_Editiconbath_btn"
                    android:contentDescription="@string/btn_bath_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="5dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_bathtub"/>

                <ImageButton
                    android:id="@+id/room_Editiconbed_btn"
                    android:contentDescription="@string/btn_bed_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="5dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_bed"/>

                <ImageButton
                    android:id="@+id/room_Editicontv_btn"
                    android:contentDescription="@string/btn_tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="5dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_tv"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:weightSum="4">

                <ImageButton
                    android:id="@+id/room_Editiconkitchen_btn"
                    android:contentDescription="@string/btn_kitchen_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="10dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_kitchen"/>

                <ImageButton
                    android:id="@+id/room_Editicongarage_btn"
                    android:contentDescription="@string/btn_garage_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="10dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_garage"/>

                <ImageButton
                    android:id="@+id/room_Editiconother_btn"
                    android:contentDescription="@string/btn_other_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectable_button_bg"
                    android:elevation="10dp"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_other_house"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
            android:id="@+id/room_put_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="#6FAF25"
            android:text="@string/editRoom" />

        <Button
            android:id="@+id/room_delete_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="#D13126"
            android:text="@string/deleteRoom" />
    </LinearLayout>

</LinearLayout>