<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/cardDev_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/ic_home"/>

        <TextView
            android:id="@+id/cardDev_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp">

            <Button
                android:id="@+id/cardDev_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/black"
                android:text="@string/edit"/>

            <Button
                android:id="@+id/cardDev_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/black"
                android:text="@string/delete"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>